--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2504,6 +2504,7 @@ span.contacts_item-title {
 }
 .page_contacts-form p .wpcf7-spinner {
   width: 27px;
+  margin: 0;
 }
 
 /*---------------------------------------------------------------------------------------------------*/
