--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2629,6 +2629,34 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   width: 100%;
 }
 
+/* -- PAGE TESTIMONIALS --*/
+.page__reviews-block.page_testimonials .main_block__wrapper {
+  max-width: 100%;
+}
+.page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide {
+  max-width: 100%;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide .reviews_image {
+  display: block;
+  width: 50%;
+}
+.page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide .reviews_image img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 5px 0px 0px 5px;
+}
+.page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide .reviews_body {
+  width: 50%;
+}
+
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer-----------------------------------------*/
 .footer {
@@ -3482,6 +3510,27 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     background: radial-gradient(50.09% 124.66% at 65.27% 55.89%, rgba(73, 0, 107, 0.396) 0%, rgba(255, 31, 233, 0.4) 57.07%, rgba(222, 129, 255, 0.4) 100%);
     -webkit-filter: blur(100px);
             filter: blur(100px);
+  }
+  .page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide {
+    max-width: 100%;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide .reviews_image {
+    display: block;
+    width: 100%;
+  }
+  .page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide .reviews_image img {
+    height: 100%;
+    border-radius: 5px 5px 0px 0px;
+  }
+  .page__reviews-block.page_testimonials .main_block__wrapper .reviews-slide .reviews_body {
+    width: 100%;
   }
   .staff_wrapper {
     grid-template-columns: 1fr;
