add cursor pointer for current city

--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -329,6 +329,7 @@ main.page {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding-right: 5px;
+  cursor: pointer;
 }
 
 .header__location_text {
