--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -348,6 +348,7 @@ body {
     width: 200px;
     justify-content: flex-end;
     padding-right: 5px;
+    cursor: pointer;
   }
 
   .header__location_text {
