--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -376,6 +376,10 @@ ul.header_cities {
   padding: 5px;
   cursor: pointer;
 }
+#dropdown ul li:hover {
+  background-color: rgba(255, 255, 255, 0.062745098);
+  padding: 5px 0px;
+}
 
 .current_city {
   cursor: pointer;
