--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -391,6 +391,12 @@ body {
     background-color: #ffffff10;
     padding-left: 10px;  
   }
+  &:last-child{
+    border-radius: 0px 0px 10px 10px;
+  }
+  &:first-child{
+    border-radius: 10px 10px 0px 0px;
+  }
 }
 
   .current_city{
