--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -391,14 +391,9 @@ body {
 
   &:hover{
     background-color: #ffffff10;
-    padding-left: 10px;  
-  }
-  &:last-child{
-    border-radius: 0px 0px 10px 10px;
-  }
-  &:first-child{
-    border-radius: 10px 10px 0px 0px;
-  }
+    padding-left: 10px; 
+    border-radius: 10px; 
+  }  
 }
 
   .current_city{
