edit action popup

--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2427,7 +2427,7 @@ body {
 #promo_modal{
   width: 400px;
   right: -500px;
-  background: linear-gradient(90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(90deg, #6025bf, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   max-height: 600px;
   font-family: "Inter";
