--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -2883,8 +2883,8 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 #promo_modal {
   width: 400px;
   right: -500px;
-  background: -webkit-gradient(linear, left top, right top, from(#ee7752), color-stop(#e73c7e), color-stop(#23a6d5), to(#23d5ab));
-  background: linear-gradient(90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: -webkit-gradient(linear, left top, right top, from(#6025bf), color-stop(#e73c7e), color-stop(#23a6d5), to(#23d5ab));
+  background: linear-gradient(90deg, #6025bf, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   max-height: 600px;
   font-family: "Inter";
