--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -276,6 +276,7 @@ main.page {
   top: 55px;
   left: 0;
   grid-template-columns: repeat(4, 1fr);
+  margin-top: 15px;
 }
 .header__menu .sub-menu .sub-menu .menu-item .menu__link {
   padding: 5px 10px;
@@ -2490,7 +2491,8 @@ span.contacts_item-title {
   gap: 10px;
 }
 
-.captcha img, .captcha span {
+.captcha img,
+.captcha span {
   width: 50%;
 }
 
