--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -792,6 +792,7 @@ ul.header_cities {
 .page__services-block {
     position: relative;
     z-index: 6;
+    padding-bottom: 0px;
 }
 
 .services-block__title_h2 {
@@ -1768,6 +1769,10 @@ section.form_row {
 
 /*----------------------------------------------------category-list----------------------------------*/
 
+.category_top-text {
+    padding-top: 75px;
+}
+
 .services-block__grid {
     display: flex;
     flex-wrap: wrap;
@@ -1897,6 +1902,10 @@ section.page__service-offer,
 section.page__service-offer {
     padding: 0;
     padding-top: 75px;
+}
+
+#wpcf7-f1968-o1 {
+    margin-top: -50px;
 }
 
 .text_wrapper {
