--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1369,6 +1369,10 @@ section.form_row {
     border-radius: 5px;
 }
 
+.site-types {
+    padding-bottom: 0px;
+}
+
 
 /*--------------------------------------------------------------------------------------------------*/
 
