--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -1511,6 +1511,10 @@ section.form_row {
   border-radius: 5px;
 }
 
+.site-types {
+  padding-bottom: 0px;
+}
+
 /*--------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------page__useful-articles--------------------------------*/
 .useful-articles {
