--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1806,6 +1806,10 @@ section.form_row {
     width: 100%
 }
 
+.offer_block-text {
+    padding-bottom: 30px;
+}
+
 .offer_block-tariff {
     width: 30%;
     display: flex!important;
@@ -2762,4 +2766,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     100% {
         background-position: 0% 50%;
     }
+}
+
+// Кнопка Акции
+.promo_btn {
+    display: none;
 }
