--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2770,5 +2770,5 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 
 // Кнопка Акции
 .promo_btn {
-    display: none;
+    display: none !important;
 }
