--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1490,7 +1490,7 @@ section.form_row {
 }
 
 .tabs>label {
-    margin-right: 20px;
+    margin-right: 10px;
     display: inline-block;
     text-align: center;
     vertical-align: middle;
@@ -1506,6 +1506,7 @@ section.form_row {
     position: relative;
     top: 1px;
     text-transform: uppercase;
+    margin-bottom: 5px;
 }
 
 .tabs>input[type="radio"]:checked+label {
