--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2437,6 +2437,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 
 .footer_left-side {
     width: 25%;
+    padding-bottom: 50px;
 }
 
 .footer__navigation {
