--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -852,6 +852,12 @@
     }
 }
 
+@media(max-width: 390px) {
+    .footer_left-side {
+        padding-bottom: 680px;
+    }
+}
+
 @media(max-width: 550px) {
     .footer_left-side,
     .footer__navigation {
