--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2773,3 +2773,41 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 .promo_btn {
     display: none !important;
 }
+
+//Price on single service
+.single-services-block__price {
+    white-space: nowrap;
+}
+
+.single_services-block__text-price {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 30px;
+    width: 410px;
+}
+
+#wpcf7-f2491-p2094-o1 {
+    .contact_form {
+        display: inline-block !important;
+    }
+}
+
+#wpcf7-f2491-p2094-o1 {
+    .wpcf7-tel {
+        width: 400px;
+    }
+}
+
+#wpcf7-f2491-p2094-o1 {
+    .wpcf7-submit {
+        width: 310px;
+    }
+}
+
+.single-services-block {
+    padding: 0px 0 75px 0;
+}
+
+.single_services-block__text {
+    display: inline-block;
+}
