--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1970,6 +1970,7 @@ a.tags_item {
     margin-bottom: 10px;
 }
 
+//
 .service-article_text {
     font-family: "Inter";
     color: $article-text-color;
