--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -983,22 +983,19 @@
     }
 }
 
-@media(min-width:1255px) {
-    #wpcf7-f3248-p2692-o2 .wpcf7-tel {
-        width: 300px;
-    }
-}
-
-@media(min-width:1145px) {
-    .single_services-block__text-price {
-        width: 300px;
-    }
-}
-
-@media(min-width:1025px) {
-    #wpcf7-f3248-p2692-o2 .wpcf7-tel {
-        width: 250px;
-    }
-}
-
-//
+// @media(min-width:1255px) {
+//     #wpcf7-f3248-p2692-o2 .wpcf7-tel {
+//         width: 300px;
+//     }
+// }
+// @media(min-width:1145px) {
+//     .single_services-block__text-price {
+//         width: 300px;
+//     }
+// }
+// @media(min-width:1025px) {
+//     #wpcf7-f3248-p2692-o2 .wpcf7-tel {
+//         width: 250px;
+//     }
+// }
+// //
