--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4040,17 +4040,17 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 @media (min-width: 1255px) {
   #wpcf7-f3248-p2692-o2 .wpcf7-tel {
-    width: 300px;
+    width: 300px !important;
   }
 }
 @media (min-width: 1145px) {
   .single_services-block__text-price {
-    width: 300px;
+    width: 300px !important;
   }
 }
 @media (min-width: 1025px) {
   #wpcf7-f3248-p2692-o2 .wpcf7-tel {
-    width: 250px;
+    width: 250px !important;
   }
 }
 @-webkit-keyframes gradient {
