--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -994,3 +994,9 @@
         width: 300px !important;
     }
 }
+
+@media(max-width:1145px) {
+    #wpcf7-f3248-p2692-o2 .wpcf7-tel {
+        width: 200px !important;
+    }
+}
