--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4048,6 +4048,11 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     width: 300px !important;
   }
 }
+@media (max-width: 1025px) {
+  #wpcf7-f3248-p2692-o2 .wpcf7-tel {
+    width: 200px !important;
+  }
+}
 @-webkit-keyframes gradient {
   0% {
     background-position: 0% 50%;
