--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -1000,3 +1000,14 @@
         width: 200px !important;
     }
 } //
+@media(max-width:900x) {
+    #wpcf7-f3248-p2692-o2 .wpcf7-submit {
+        width: 250px !important;
+    }
+}
+
+@media(max-width:845x) {
+    .single_services-block__text {
+        display: block !important;
+    }
+}
