--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4054,7 +4054,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   }
 }
 @media (max-width: 910x) {
-  #wpcf7-f3248-p2692-o2 .wpcf7-submit {
+  #wpcf7-f3248-p2692-o2 .contact_form .wpcf7-submit {
     width: 250px !important;
   }
 }
