--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2670,6 +2670,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 
 #open_modal {
+    display: none;
     background: linear-gradient(90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
