--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -983,39 +983,36 @@
     }
 }
 
-@media(max-width:1255px) {
-    #wpcf7-f3248-p2692-o2 {
-        .wpcf7-tel {
-            width: 300px !important;
-        }
-    }
-}
-
-@media(max-width:1145px) {
-    .single_services-block__text-price {
-        width: 300px !important;
-    }
-}
-
-@media(max-width:1025px) {
-    #wpcf7-f3248-p2692-o2 {
-        .wpcf7-tel {
-            width: 200px !important;
-        }
-    }
-} //
-@media(max-width:910x) {
-    #wpcf7-f3248-p2692-o2 {
-        .contact_form {
-            .wpcf7-submit {
-                width: 250px !important;
-            }
-        }
-    }
-}
-
-@media(max-width:845x) {
-    .single_services-block__text {
-        display: block !important;
-    }
-}
+// @media(max-width:1255px) {
+//     #wpcf7-f3248-p2692-o2 {
+//         .wpcf7-tel {
+//             width: 300px !important;
+//         }
+//     }
+// }
+// @media(max-width:1145px) {
+//     .single_services-block__text-price {
+//         width: 300px !important;
+//     }
+// }
+// @media(max-width:1025px) {
+//     #wpcf7-f3248-p2692-o2 {
+//         .wpcf7-tel {
+//             width: 200px !important;
+//         }
+//     }
+// } //
+// @media(max-width:910x) {
+//     #wpcf7-f3248-p2692-o2 {
+//         .contact_form {
+//             .wpcf7-submit {
+//                 width: 250px !important;
+//             }
+//         }
+//     }
+// }
+// @media(max-width:845x) {
+//     .single_services-block__text {
+//         display: block !important;
+//     }
+// }
