--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2777,33 +2777,39 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 
 //Price on single service
-// .single-services-block__price {
-//     white-space: nowrap;
-// }
-// .single_services-block__text-price {
+.single-services-block__price {
+    white-space: nowrap;
+}
+
+.single_services-block__text-price {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 30px;
+    width: 410px;
+}
+
+#wpcf7-f3248-p2692-o2 {
+    .contact_form {
+        display: inline-block !important;
+    }
+}
+
+#wpcf7-f3248-p2692-o2 {
+    .wpcf7-tel {
+        width: 400px;
+    }
+}
+
+#wpcf7-f3248-p2692-o2 {
+    .wpcf7-submit {
+        width: 310px;
+    }
+}
+
+.single-services-block {
+    padding: 0px 0 75px 0;
+}
+
+// .single_services-block__text {
 //     display: inline-block;
-//     margin-right: 10px;
-//     font-size: 30px;
-//     width: 410px;
 // }
-// #wpcf7-f3248-p2692-o2 {
-//     .contact_form {
-//         display: inline-block !important;
-//     }
-// }
-// #wpcf7-f3248-p2692-o2 {
-//     .wpcf7-tel {
-//         width: 400px;
-//     }
-// }
-// #wpcf7-f3248-p2692-o2 {
-//     .wpcf7-submit {
-//         width: 310px;
-//     }
-// }
-// .single-services-block {
-//     padding: 0px 0 75px 0;
-// }
-// // .single_services-block__text {
-// //     display: inline-block;
-// // }
