--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4090,4 +4090,8 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 
 .single-services-block {
   padding: 0px 0 75px 0;
+}
+
+.single_services-block__text {
+  display: inline-block;
 }/*# sourceMappingURL=new_style.css.map */
