--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2810,6 +2810,6 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     padding: 0px 0 75px 0;
 }
 
-// .single_services-block__text {
-//     display: inline-block;
-// }
+.single_services-block__text {
+    display: inline-block;
+}
