--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2811,5 +2811,5 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 
 .single_services-block__text {
-    display: inline-block;
+    display: inline-block !important;
 }
