--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2813,3 +2813,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 .single_services-block__text {
     display: inline-block !important;
 }
+
+#wpcf7-f3248-p2692-o2 {
+    .contact_form {
+        display: flex;
+    }
+}
