--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2814,7 +2814,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     display: inline-block !important;
 }
 
-#wpcf7-f3248-p2692-o2 {
+.single_services-block__text {
     .contact_form {
         display: flex;
     }
