--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4039,6 +4039,31 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     display: none;
   }
 }
+@media (max-width: 1255px) {
+  #wpcf7-f3248-p2692-o2 .wpcf7-tel {
+    width: 300px !important;
+  }
+}
+@media (max-width: 1145px) {
+  .single_services-block__text-price {
+    width: 300px !important;
+  }
+}
+@media (max-width: 1025px) {
+  #wpcf7-f3248-p2692-o2 .wpcf7-tel {
+    width: 200px !important;
+  }
+}
+@media (max-width: 910x) {
+  #wpcf7-f3248-p2692-o2 .contact_form .wpcf7-submit {
+    width: 250px !important;
+  }
+}
+@media (max-width: 845x) {
+  .single_services-block__text {
+    display: block !important;
+  }
+}
 @-webkit-keyframes gradient {
   0% {
     background-position: 0% 50%;
