--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2808,6 +2808,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 
 .single-services-block {
     padding: 0px 0 75px 0;
+    display: none;
 }
 
 .single_services-block__text {
