--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2849,3 +2849,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 .single_services-block__text {
     display: inline-block;
 }
+
+.single_services-block__text {
+    .contact_form {
+        display: flex;
+    }
+}
