--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2785,7 +2785,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     display: inline-block;
     margin-right: 10px;
     font-size: 30px;
-    width: 450px;
+    width: 40%;
 }
 
 #wpcf7-f3248-p2692-o2 {
@@ -2812,6 +2812,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 
 .single_services-block__text {
     display: inline-block !important;
+    width: 65%;
 }
 
 .single_services-block__text {
