--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -984,3 +984,8 @@
 }
 
 //Price on single service
+@media(max-width:805px) {
+    .single-services-block__price {
+        white-space: normal;
+    }
+}
