--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4040,8 +4040,8 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   }
 }
 @media (max-width: 805px) {
-  .single-services-block__price {
-    white-space: normal;
+  .single-services-block__text {
+    display: block !important;
   }
 }
 @-webkit-keyframes gradient {
