--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4098,7 +4098,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 
 .single_services-block__text {
-  display: inline-block !important;
+  display: inline-block;
   width: 65%;
 }
 
