--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2811,7 +2811,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 
 .single_services-block__text {
-    display: inline-block !important;
+    display: inline-block;
     width: 65%;
 }
 
