--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -988,4 +988,7 @@
     .single-services-block__text {
         display: block !important;
     }
+    .single_services-block__text-price {
+        display: block;
+    }
 }
