--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4043,6 +4043,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   .single-services-block__text {
     display: block !important;
   }
+  .single_services-block__text-price {
+    display: block;
+  }
 }
 @-webkit-keyframes gradient {
   0% {
