--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -989,6 +989,6 @@
         display: block !important;
     }
     .single_services-block__text-price {
-        display: block;
+        display: block !important;
     }
 }
