--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4044,7 +4044,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     display: block !important;
   }
   .single_services-block__text-price {
-    display: block;
+    display: block !important;
   }
 }
 @-webkit-keyframes gradient {
