--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -991,4 +991,7 @@
     .single_services-block__text-price {
         display: block !important;
     }
+    .single_services-block__text {
+        width: 100%;
+    }
 }
