--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4046,6 +4046,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   .single_services-block__text-price {
     display: block !important;
   }
+  .single_services-block__text {
+    width: 100%;
+  }
 }
 @-webkit-keyframes gradient {
   0% {
