--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -992,6 +992,6 @@
         display: block !important;
     }
     .single_services-block__text {
-        width: 100%;
+        width: 100% !important;
     }
 }
