--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4047,7 +4047,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     display: block !important;
   }
   .single_services-block__text {
-    width: 100%;
+    width: 100% !important;
   }
 }
 @-webkit-keyframes gradient {
