--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4054,6 +4054,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   .single_services-block__text .contact_form {
     display: grid !important;
   }
+  .single-services-block {
+    padding: 0 0 20px;
+  }
 }
 @-webkit-keyframes gradient {
   0% {
