--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2820,3 +2820,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
         display: flex;
     }
 }
+
+._container {
+    .cases-block__container {
+        padding-bottom: 50px;
+    }
+}
