--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4120,4 +4120,8 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+._container .cases-block__container {
+  padding-bottom: 50px;
 }/*# sourceMappingURL=new_style.css.map */
