--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -2826,3 +2826,7 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
         padding-bottom: 50px;
     }
 }
+
+.tarifs_mobile {
+    display: none !important;
+}
