--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -975,6 +975,9 @@
     .tarifs_desktop {
         display: none !important;
     }
+    .single_services-block__text-price {
+        width: 100%;
+    }
 }
 
 @media(min-width:769px) {
