--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4033,6 +4033,9 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   .tarifs_desktop {
     display: none !important;
   }
+  .single_services-block__text-price {
+    width: 100%;
+  }
 }
 @media (min-width: 769px) {
   .tarifs_mobile {
