--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -975,9 +975,6 @@
     .tarifs_desktop {
         display: none !important;
     }
-    .single_services-block__text-price {
-        width: 100%;
-    }
 }
 
 @media(min-width:769px) {
@@ -1007,5 +1004,9 @@
     }
     .single-services-block {
         padding: 0 0 20px !important;
+    }
+    .single_services-block__text-price {
+        width: 100%;
+        text-align: center;
     }
 }
