--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4033,9 +4033,6 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   .tarifs_desktop {
     display: none !important;
   }
-  .single_services-block__text-price {
-    width: 100%;
-  }
 }
 @media (min-width: 769px) {
   .tarifs_mobile {
@@ -4059,6 +4056,10 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
   }
   .single-services-block {
     padding: 0 0 20px !important;
+  }
+  .single_services-block__text-price {
+    width: 100%;
+    text-align: center;
   }
 }
 @-webkit-keyframes gradient {
