--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -1006,7 +1006,7 @@
         padding: 0 0 20px !important;
     }
     .single_services-block__text-price {
-        width: 100%;
-        text-align: center;
+        width: 100% !important;
+        text-align: center !important;
     }
 }
