--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4058,8 +4058,8 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
     padding: 0 0 20px !important;
   }
   .single_services-block__text-price {
-    width: 100%;
-    text-align: center;
+    width: 100% !important;
+    text-align: center !important;
   }
 }
 @-webkit-keyframes gradient {
