--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -4086,4 +4086,46 @@ input.wpcf7-form-control.has-spinner.wpcf7-submit {
 }
 .promo_btn {
   display: none !important;
+}
+
+.single-services-block__price {
+  white-space: nowrap;
+}
+
+.single_services-block__text-price {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 30px;
+  width: 40%;
+}
+
+#wpcf7-f3248-p2692-o2 .contact_form {
+  display: inline-block !important;
+}
+
+#wpcf7-f3248-p2692-o2 .wpcf7-tel {
+  width: 360px;
+}
+
+#wpcf7-f3248-p2692-o2 .wpcf7-submit {
+  width: 310px;
+}
+
+.single-services-block {
+  padding: 0px 0 75px 0;
+}
+
+.single_services-block__text {
+  display: inline-block;
+  width: 65%;
+}
+
+.single_services-block__text .contact_form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+._container .cases-block__container {
+  padding-bottom: 50px;
 }/*# sourceMappingURL=new_style.css.map */
